# idmhound

./: README.md  pyproject.toml
idmhound/: main.py
idmhound/collectors/: ldap.py
idmhound/graph/: edges.py  legacy_nodes.py  nodes.py  utils.py
