[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idmhound"
version = "0.3.0"
description = "Bloodhound ingestor for FreeIPA/Red Hat IdM realms."
authors = [{name="Lvruibr", email="lvruibr@protonmail.ch"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["ldap3>=2.9.1"]

[tool.setuptools.packages]
find = {}

[project.scripts]
idmhound = "idmhound.main:main"